Bump Tycho version and required Java build environment